Minor changes to Security for added count API